remove nashorn usages