@@ -5,9 +5,17 @@ repositories {
 }
 
 dependencies {
-    compile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    compile 'org.mozilla:rhino:1.7R4'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
-test {
-    jvmArgs "-Djava.ext.dirs=$projectDir/lib"
+task combineJavaScript << {
+    File combined = new File('build/tmp/combined.js')
+    combined.text = new File('src/main/resources/js/environment.js').text + new File('src/main/resources/js/less-1.3.3.js').text + new File('src/main/resources/js/compile.js').text
+}
+
+task compileJavaScript(type: JavaExec, dependsOn: combineJavaScript) {
+    classpath configurations.compile, new File('build/classes/main')
+    main = 'org.mozilla.javascript.tools.jsc.Main'
+    args '-d', 'build/classes/main', '-o', 'LessImpl.class', '-package', 'com.github.houbie.lesscss.compiledjs', '-implements', 'com.github.houbie.lesscss.Less', '-opt', '9', '-version', '170', 'build/tmp/combined.js'
 }
